--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,12 +3,14 @@ const today = new Date();
 ---
 
 <footer>
-  &copy; {today.getFullYear()} Your name here. All rights reserved.
+  &copy; {today.getFullYear()} Munus Shih.
 </footer>
 <style>
   footer {
-    padding: 2em 1em 6em 1em;
-    color: rgb(var(--gray));
+    padding: 2em 1em 2em 1em;
+    color: rgb(var(--black));
+    font-size: 1rem;
+    letter-spacing: -0.05em;
     text-align: left;
   }
 </style>
