--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,11 +4,15 @@
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
 
+@import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Inclusive+Sans:ital,wght@0,300..700;1,300..700&family=Young+Serif&display=swap");
+@import url("utils.css");
+@import url("about.css");
+
 :root {
-  --accent: #2337ff;
+  --accent: hotpink;
   --accent-dark: #000d8a;
   --black: 15, 18, 25;
-  --gray: 96, 115, 159;
+  --gray: 150, 150, 150;
   --gray-light: 229, 233, 240;
   --gray-dark: 34, 41, 57;
   --gray-gradient: rgba(var(--gray-light), 50%), #fff;
@@ -17,45 +21,46 @@
     0 16px 32px rgba(var(--gray), 33%);
 }
 
-@font-face {
-  font-style: normal;
-  font-weight: 400;
-  src: url("/fonts/atkinson-regular.woff") format("woff");
-  font-family: "Atkinson";
-  font-display: swap;
-}
-
-@font-face {
-  font-style: normal;
-  font-weight: 700;
-  src: url("/fonts/atkinson-bold.woff") format("woff");
-  font-family: "Atkinson";
-  font-display: swap;
-}
-
 body {
   padding: 0;
-  font-family: "Atkinson", sans-serif;
+  font-family: "Inclusive Sans", sans-serif;
   text-align: left;
   word-wrap: break-word;
-  margin: 0;
+  margin: auto;
+  width: calc(100% - 2em);
+  max-width: 1800px;
   color: rgb(var(--gray-dark));
-  font-size: 20px;
-  line-height: 1.7;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.2;
   overflow-wrap: break-word;
+}
+
+[data-barba="container"] {
+  transition: opacity 0.5s ease-in-out;
+}
+
+@media screen and (max-width: 720px) {
+  body {
+    width: calc(100% - 0.5em);
+  }
 }
 
 main {
   margin: auto;
-  padding: 3em 1em;
-  width: calc(100% - 2em);
-  max-width: 1440px;
+  padding: 1rem 1rem;
 }
 
 header {
   margin: auto;
-  width: calc(100% - 2em);
-  max-width: 1440px;
+  padding: 1rem 1rem;
+}
+
+@media screen and (max-width: 720px) {
+  main,
+  header {
+    padding: 0.75rem;
+  }
 }
 
 h1,
@@ -96,6 +101,7 @@ b {
 
 a {
   color: var(--accent);
+  text-decoration: none;
 }
 
 a:hover {
@@ -155,16 +161,6 @@ hr {
   border-top: 1px solid rgb(var(--gray-light));
 }
 
-@media (max-width: 720px) {
-  body {
-    font-size: 18px;
-  }
-
-  main {
-    padding: 1em;
-  }
-}
-
 .sr-only {
   position: absolute !important;
   margin: 0;
@@ -181,4 +177,16 @@ hr {
   clip-path: inset(50%);
   /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
   white-space: nowrap;
+}
+
+.monospace {
+  font-family: "Anonymous Pro", monospace;
+}
+
+.serif {
+  font-family: "Young Serif", serif;
+}
+
+.sans-serif {
+  font-family: "Inclusive Sans", sans-serif;
 }
