--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,173 +1,19 @@
 ---
-import BaseHead from "@/components/BaseHead.astro";
-import Header from "@/components/Header.astro";
-import Bio from "@/components/Bio.astro";
-import Footer from "@/components/Footer.astro";
+import BaiscLayout from "@/layouts/Basic.astro";
+import Column from "@/components/Column.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
-import { getCollection } from "astro:content";
-import FormattedDate from "@/components/FormattedDate.astro";
-import { Image } from "astro:assets";
-
-const posts = (await getCollection("work")).sort(
-  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
-);
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
-  <body>
-    <Header />
-    <main>
-      <section>
-        <Bio />
-        <style>
-          #work-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 1rem;
-            row-gap: 2rem;
-            margin: 0;
-            padding: 0;
-            list-style-type: none;
-          }
-
-          @media screen and (max-width: 768px) {
-            #work-grid {
-              grid-template-columns: 1fr;
-            }
-          }
-
-          .title {
-            margin: 0;
-            color: rgb(var(--black));
-            font-weight: normal;
-            font-size: 1rem;
-            line-height: 1;
-            font-family: "Young Serif", serif;
-          }
-
-          .img-container {
-            position: relative;
-            padding-bottom: 50%;
-            width: 100%;
-            height: 0;
-            overflow: hidden;
-          }
-
-          .img-container img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-          }
-
-          .date-tags {
-            display: flex;
-            margin-top: 0.25em;
-            color: var(--accent);
-            letter-spacing: -0.05em;
-          }
-
-          .date-tags ul {
-            display: flex;
-            gap: 0.25em;
-            margin-right: 0.25em;
-            padding: 0;
-          }
-
-          .date-tags ul li {
-            width: max-content;
-            list-style-type: none;
-          }
-
-          .description {
-            padding-top: 0.5em;
-            max-width: 50ch;
-            color: rgb(var(--gray));
-            letter-spacing: -0.05em;
-            text-wrap: pretty;
-          }
-
-          .work-item-content {
-            display: flex;
-          }
-
-          .work-item-title {
-            width: 100%;
-          }
-
-          .work-title-box {
-            margin-top: 1rem;
-            border-top: 1px dashed rgb(var(--black));
-            border-bottom: 1px dashed rgb(var(--black));
-            padding: 1em 0;
-            width: max-content;
-          }
-
-          .work-item-description {
-            width: 100%;
-          }
-
-          @media screen and (max-width: 768px) {
-            .work-item-content {
-              flex-direction: column;
-            }
-
-            .work-title-box {
-              margin-top: 0;
-              border: 0;
-            }
-
-            p.description {
-              margin: 0;
-              padding: 0;
-            }
-          }
-        </style>
-        <ul id="work-grid">
-          {
-            posts.map((post) => (
-              <li class="work-item gsap-element">
-                <a href={`/work/${post.id}/`}>
-                  <div class="img-container">
-                    <Image
-                      width={720}
-                      height={360}
-                      src={post.data.heroImage}
-                      alt=""
-                    />
-                  </div>
-                  <div class="work-item-content">
-                    <div class="work-item-title">
-                      <div class="work-title-box">
-                        <h4 class="title">{post.data.title}</h4>
-                        <div class="date-tags monospace">
-                          <ul>
-                            {post.data.tags.map((tag) => (
-                              <li>{tag},</li>
-                            ))}
-                          </ul>
-                          <FormattedDate date={post.data.pubDate} />
-                        </div>
-                      </div>
-                    </div>
-                    <div class="work-item-description">
-                      <p class="description">{post.data.description}</p>
-                    </div>
-                  </div>
-                </a>
-              </li>
-            ))
-          }
-        </ul>
-      </section>
-    </main>
-    <Footer />
-    <script src="../scripts/smoothTransition.js"></script>
-  </body>
-</html>
+<BaiscLayout title={SITE_TITLE} description={SITE_DESCRIPTION}>
+  <main class="grid grid-cols-1 gap-0 md:grid-cols-2 lg:grid-cols-3">
+    <Column title="Selected Work" data="work" />
+    <Column title="Teaching & Examples" data="teaching" />
+    <Column title="Writing, Talks & Press" data="press" />
+    <!-- <Column title="work" /> -->
+    <!-- <Column title="work" /> -->
+    <!-- <Column title="research"
+        ><Card /><Card /><Card /><Card /><Card /><Card /><Card /></Column
+      >
+      <Column title="writing "><Card /><Card /><Card /><Card /><Card /></Column> -->
+  </main>
+</BaiscLayout>
