--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,192 +1,42 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
+@import "tailwindcss";
+@plugin '@tailwindcss/typography';
 
-@import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Inclusive+Sans:ital,wght@0,300..700;1,300..700&family=Young+Serif&display=swap");
-@import url("utils.css");
-@import url("about.css");
-
-:root {
-  --accent: hotpink;
-  --accent-dark: #000d8a;
-  --black: 15, 18, 25;
-  --gray: 150, 150, 150;
-  --gray-light: 229, 233, 240;
-  --gray-dark: 34, 41, 57;
-  --gray-gradient: rgba(var(--gray-light), 50%), #fff;
-  --box-shadow:
-    0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
-    0 16px 32px rgba(var(--gray), 33%);
-}
-
-body {
-  padding: 0;
+.sans {
   font-family: "Inclusive Sans", sans-serif;
-  text-align: left;
-  word-wrap: break-word;
-  margin: auto;
-  width: calc(100% - 2em);
-  max-width: 1800px;
-  color: rgb(var(--gray-dark));
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 1.2;
-  overflow-wrap: break-word;
-}
-
-[data-barba="container"] {
-  transition: opacity 0.5s ease-in-out;
-}
-
-@media screen and (max-width: 720px) {
-  body {
-    width: calc(100% - 0.5em);
-  }
-}
-
-main {
-  margin: auto;
-  padding: 1rem 1rem;
-}
-
-header {
-  margin: auto;
-  padding: 1rem 1rem;
-}
-
-@media screen and (max-width: 720px) {
-  main,
-  header {
-    padding: 0.75rem;
-  }
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0 0 0.5rem 0;
-  color: rgb(var(--black));
-  line-height: 1.2;
-}
-
-h1 {
-  font-size: 3.052em;
-}
-
-h2 {
-  font-size: 2.441em;
-}
-
-h3 {
-  font-size: 1.953em;
-}
-
-h4 {
-  font-size: 1.563em;
-}
-
-h5 {
-  font-size: 1.25em;
-}
-
-strong,
-b {
-  font-weight: 700;
-}
-
-a {
-  color: var(--accent);
-  text-decoration: none;
-}
-
-a:hover {
-  color: var(--accent);
-}
-
-p {
-  margin-bottom: 1em;
-}
-
-.prose p {
-  margin-bottom: 2em;
-}
-
-textarea {
-  width: 100%;
-  font-size: 16px;
-}
-
-input {
-  font-size: 16px;
-}
-
-table {
-  width: 100%;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-code {
-  border-radius: 2px;
-  background-color: rgb(var(--gray-light));
-  padding: 2px 5px;
-}
-
-pre {
-  border-radius: 8px;
-  padding: 1.5em;
-}
-
-pre > code {
-  all: unset;
-}
-
-blockquote {
-  margin: 0px;
-  border-left: 4px solid var(--accent);
-  padding: 0 0 0 20px;
-  font-size: 1.333em;
-}
-
-hr {
-  border: none;
-  border-top: 1px solid rgb(var(--gray-light));
-}
-
-.sr-only {
-  position: absolute !important;
-  margin: 0;
-  border: 0;
-  padding: 0;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
-  clip: rect(1px 1px 1px 1px);
-  /* maybe deprecated but we need to support legacy browsers */
-  clip: rect(1px, 1px, 1px, 1px);
-  /* modern browsers, clip-path works inwards from each corner */
-  clip-path: inset(50%);
-  /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
-  white-space: nowrap;
 }
 
 .monospace {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Instrument Serif", serif;
+  @apply leading-tight tracking-wide;
+}
+
+.code {
+  font-size: 16px;
   font-family: "Anonymous Pro", monospace;
+  @apply leading-tight tracking-tight;
 }
 
-.serif {
-  font-family: "Young Serif", serif;
+p {
+  @apply max-w-[70ch] text-pretty;
 }
 
-.sans-serif {
-  font-family: "Inclusive Sans", sans-serif;
+a {
+  @apply underline;
+}
+
+a:hover {
+  @apply cursor-pointer text-[blue] no-underline before:content-['(('] after:content-['))'];
+}
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+    cursor: grabbing;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
