--- a/src/components/global/BaseHead.astro
+++ b/src/components/global/BaseHead.astro
@@ -3,6 +3,7 @@
 // all pages through the use of the <BaseHead /> component.
 import "@/styles/global.css";
 import { SITE_TITLE } from "@/consts";
+import { ClientRouter } from "astro:transitions";
 
 interface Props {
   title: string;
@@ -38,6 +39,9 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
 <meta name="title" content={title} />
 <meta name="description" content={description} />
 
+<!-- router for SPA -->
+<ClientRouter />
+
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
@@ -56,6 +60,6 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-  href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Inclusive+Sans:ital,wght@0,300..700;1,300..700&family=Instrument+Serif:ital@0;1&family=Xanh+Mono:ital@0;1&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Inclusive+Sans:ital,wght@0,300..700;1,300..700&family=Instrument+Serif:ital@0;1&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Xanh+Mono:ital@0;1&display=swap"
   rel="stylesheet"
 />
