--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -5,6 +5,7 @@ import Footer from "@/components/global/Footer.astro";
 import Card from "@/components/Card.astro";
 import Column from "@/components/Column.astro";
 import Hero from "@/components/Hero.astro";
+import Overscroll from "@/components/global/Overscroll.astro";
 const { title, description, image } = Astro.props;
 ---
 
@@ -17,5 +18,6 @@ const { title, description, image } = Astro.props;
     <Header />
     <slot />
     <Footer />
+    <Overscroll />
   </body>
 </html>
