--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,14 @@
 ---
-import BaiscLayout from "@/layouts/Basic.astro";
+import BasicLayout from "@/layouts/Basic.astro";
 import Column from "@/components/Column.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
 ---
 
-<BaiscLayout title={SITE_TITLE} description={SITE_DESCRIPTION}>
-  <main class="grid grid-cols-1 gap-0 md:grid-cols-2 lg:grid-cols-3">
-    <Column title="Selected Work" data="work" />
-    <Column title="Teaching & Examples" data="teaching" />
-    <Column title="Writing, Talks & Press" data="press" />
+<BasicLayout title={SITE_TITLE} description={SITE_DESCRIPTION}>
+  <main class="grid grid-cols-1 gap-0 lg:grid-cols-3">
+    <Column title="Selected Projects" data="work" />
+    <Column title="Teaching & Open Source Contribution" data="teaching" />
+    <Column title="Selected Writing, Talks & Press" data="press" />
     <!-- <Column title="work" /> -->
     <!-- <Column title="work" /> -->
     <!-- <Column title="research"
@@ -16,4 +16,4 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
       >
       <Column title="writing "><Card /><Card /><Card /><Card /><Card /></Column> -->
   </main>
-</BaiscLayout>
+</BasicLayout>
