--- a/src/components/Column.astro
+++ b/src/components/Column.astro
@@ -7,16 +7,12 @@ const number = posts.length;
 ---
 
 <section
-  class="mt-12 border-gray-400 pr-4 pl-4 last-of-type:border-0 md:first-of-type:border-r lg:border-r"
+  class="border-gray-400 pr-4 pl-4 last-of-type:border-0 md:first-of-type:border-r lg:border-r"
 >
-  <h2
-    class="monospace mb-2 flex w-max flex-row border-b py-2 text-2xl font-bold"
-  >
+  <h2 class="monospace mb-2 flex flex-row border-b py-2 text-2xl font-bold">
     {title}
   </h2>
-  <div
-    class="no-scrollbar flex flex-col gap-4 lg:h-[calc(100dvh_-_180px)] lg:overflow-y-auto"
-  >
+  <div class="no-scrollbar flex flex-col gap-4">
     {posts.map((post) => <Card post={post} />)}
   </div>
 </section>
