--- a/src/layouts/P5Sketch.astro
+++ b/src/layouts/P5Sketch.astro
@@ -1,13 +1,18 @@
+---
+import BaseHead from "../components/global/BaseHead.astro";
+---
+
 <!doctype html>
 <html lang="en">
   <head>
+    <BaseHead title={"clock"} description={"clock"} />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"
     ></script>
 
     <meta charset="utf-8" />
   </head>
   <body>
-    <main>
+    <main transition:animate="none" transition:persist>
       <slot />
     </main>
     <style>
