--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,16 +9,16 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
 ---
 
 <BasicLayout title={`About — ${SITE_TITLE}`} description={SITE_DESCRIPTION}>
-  <main class="py-20">
+  <main class="pb-20">
     <section
       class="grid min-h-[calc(100dvh-200px)] auto-cols-min auto-rows-min grid-cols-1 gap-0 md:grid-cols-2 lg:grid-cols-3"
     >
-      <div class="col-span-1 ml-4">
+      <div class="col-span-1 mr-4 ml-4 md:mr-0">
         <Image class="dithered" src={profile} alt="A protrait of Munus" />
       </div>
       <div class="col-span-2 mt-8 grid grid-cols-1 md:grid-cols-3 lg:mt-0">
         <article
-          class="sans map-4 col-span-2 mx-4 flex flex-col gap-4 border-gray-400 text-xl md:mt-0 lg:border-l lg:pl-4"
+          class="sans map-4 col-span-2 mx-4 flex flex-col gap-4 border-gray-400 md:mt-0 lg:border-l lg:pl-4"
         >
           <Content />
         </article>
