--- a/src/layouts/P5Sketch.astro
+++ b/src/layouts/P5Sketch.astro
@@ -1,5 +1,5 @@
 ---
-import BaseHead from "../components/global/BaseHead.astro";
+import BaseHead from "@/components/global/BaseHead.astro";
 ---
 
 <!doctype html>
