--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import type { CollectionEntry } from "astro:content";
 import BaseHead from "@/components/BaseHead.astro";
 import Header from "@/components/Header.astro";
@@ -99,4 +99,4 @@ const { title, description, pubDate, tags, updatedDate, heroImage, roles } =
     </main>
     <Footer />
   </body>
-</html>
+</html> -->
