--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
 <BasicLayout title={`About — ${SITE_TITLE}`} description={SITE_DESCRIPTION}>
   <main class="pb-20">
     <section
-      class="grid min-h-[calc(100dvh-200px)] auto-cols-min auto-rows-min grid-cols-1 gap-0 md:grid-cols-2 lg:grid-cols-3"
+      class="grid auto-cols-min auto-rows-min grid-cols-1 gap-0 md:grid-cols-2 lg:grid-cols-3"
     >
       <div class="col-span-1 mr-4 ml-4 md:mr-0">
         <Image class="dithered" src={profile} alt="A protrait of Munus" />
