--- a/src/components/global/BaseHead.astro
+++ b/src/components/global/BaseHead.astro
@@ -12,6 +12,7 @@ interface Props {
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+const base = import.meta.env.BASE_URL;
 
 const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
 ---
@@ -19,7 +20,7 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href={`${base}favicon.svg`} />
 <link rel="sitemap" href="/sitemap-index.xml" />
 <link
   rel="alternate"
