--- a/src/components/utils/Media.astro
+++ b/src/components/utils/Media.astro
@@ -2,17 +2,20 @@
 // Media.astro
 const { src, alt, isVideo = false, scaling = 1, cropped = false } = Astro.props;
 
+const base = import.meta.env.BASE_URL;
 const cdnPrefix = import.meta.env.DEV
-  ? "" // local dev uses /public
+  ? base
   : "https://cdn.jsdelivr.net/gh/munusshih/munusshih.com@main/public";
 
 const finalSrc = src.startsWith("/") ? `${cdnPrefix}${src}` : src;
+const posterSrc = "posters" + src.replace(/\.(mp4|webm|ogg)$/i, ".jpg");
 ---
 
 {
   isVideo ? (
     <video
       src={finalSrc}
+      poster={posterSrc}
       autoplay
       loop
       muted
