--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -9,7 +9,7 @@ All the texts are set in [Inclusive Sans by Olivia King](https://fonts.google.co
 const html = marked(markdown);
 ---
 
-<footer client:load class="p-4 pt-20">
+<footer client:load class="p-4 pt-20" transition:persist>
   <div
     class="footnote code max-w-[40ch] py-8 pr-4 text-gray-600 prose-p:text-[12px]"
     set:html={html}
