--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -19,5 +19,5 @@ const { title, description, image } = Astro.props;
     <slot />
     <Footer />
     <Overscroll />
-  </body><script src="../scripts/smoothTransition.js"></script>
+  </body>
 </html>
